  - When the X11 initialization failed, rgl messed up the S3
    methods system.  (Reported by Gregory Jefferis.)
  - Improved support of mesh3d objects:  added print methods,
    added meshColor argument to wire3d() and shade3d() to control how
    colors are interpreted, added "rgl.meshColorWarning"
    option to control warnings about these changes.
  - Added arc3d() function to draw spherical arcs
  - Added "polygon_offset" material property, to allow lines to be drawn
    on surfaces.
  - Added plot3d(), persp3d() and as.mesh3d() methods for
    "triSht" and "tri" classes (produced by interp and tripack
    packages.)
  - The plot3d.mesh3d() method now has the same default
    for "aspect" as the default method.
  - Probably due to a compiler change, rgl.bbox() was 
    returning 0/1 instead of the id of the axes.
  - pch3d() was failing in rglwidget() for some shapes.
    (Reported by Luca Scrucca.)
  - pch3d() now allows separate "color" and "bg" specifications
    for each point.  In addition, the default for the "lit"
    material property is now FALSE, so by default filled
    symbols will match the requested colour regardless of 
    lighting.
  - par3d(mouseMode = "none") was not implemented properly,
    so appeared to be a no-op.
  - plot3d() methods for objects of class "formula" and "lm"
    and a persp3d() method for objects of class "formula"
    have been added.  (A bug in the implementation of
    as.mesh3d.deldir() was found and fixed during the 
    latter addition.)
  - as.mesh3d(), plot3d() and persp3d() methods for "ashape3d"
    objects from the alphashape3d package have been added.
  - The mouse mode (trackball, zoom, etc.) can now be applied
    separately to each individual subscene in a scene.
    (By default the mode is inherited from the root subscene.)
  - Added par3d("userProjection"), to allow the user to supply
    a change to the projection after all other calculations 
    have been done.