@@ -50,6 +50,7 @@ public:
   void        setFontUseFreeType(bool useFreeType);
   void	      setDefaultFont(const char *family, int style, double cex, bool useFreeType);
   const char* getFontname() const;
+  int         getActiveSubscene() {return activeSubscene;}
   
   /* NB:  these functions do not maintain consistency with userMatrix */
   
